# alice-qqbot

./: README.md  main.py  pyproject.toml
data/voice/: goodmorning.m4a  goodnight.m4a
modules/alice_anime_timesche/: __init__.py
modules/alice_bangumi/: __init__.py
modules/alice_birthday_searcher/: __init__.py
modules/alice_images/: __init__.py
modules/alice_nudge/: __init__.py
modules/alice_picture_from_internet/: __init__.py
modules/alice_talk/: __init__.py
modules/alice_voice/: __init__.py  __init__.py.bak
modules/alice_ygo/: __init__.py
